--- a/Stored Procedure/2. Example with Parameters.md
+++ b/Stored Procedure/2. Example with Parameters.md
@@ -1,7 +1,12 @@
 
 ### Create a stored procedure to add a row to the table "College" with values
 
--- table --
+| college_code | college_name | address           |
+|--------------|--------------|-------------------|
+|        12982 | TKM          | Kollam            |
+|        12983 | RIT          | Pambady, Kottayam |
+|        12986 | CET          | Trivandrum        |
+|        12988 | GEC          | Trissur           |
 
 Ans: 
 
@@ -30,7 +35,13 @@ call add_row(12934, "CEC", "Chengannur");
 ```
 the new Table: 
 
--- table --
+| college_code | college_name | address           |
+|--------------|--------------|-------------------|
+|        12982 | TKM          | Kollam            |
+|        12983 | RIT          | Pambady, Kottayam |
+|        12986 | CET          | Trivandrum        |
+|        12988 | GEC          | Trissur           |
+|        12934 | CEC          | Chengannur        |
 
 
 
